added admin view

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lotus-frontend-v2-hooks",
+  "name": "Service Hive",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -16,12 +16,14 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
     "bootstrap": "^5.2.3",
+    "chart.js": "^4.4.0",
     "history": "^5.1.0",
     "jspdf": "^2.5.1",
     "material-ui-image": "^3.3.2",
     "notistack": "^2.0.3",
     "react": "^17.0.2",
     "react-bootstrap": "^2.7.4",
+    "react-chartjs-2": "^5.2.0",
     "react-data-table-component": "^7.5.3",
     "react-dom": "^17.0.2",
     "react-material-ui-carousel": "^3.4.2",
